# he2plus-lib

./: .buildinfo  .gitattributes  .gitignore  .npmignore  AUTHENTIC_TEST_COMPLETE.md  CHANGELOG.md  COMMUNITY_STRATEGY.md  CONTRIBUTING.md  DOCKER_VALIDATION_REPORT.md  DOCUMENTATION_UPDATE.md  GITHUB_ACTIONS_READY.md  GITHUB_SETUP.md  INSTALLATION.md  LICENSE  MANIFEST.in  MARKETING_STRATEGY.md  NPM_PACKAGE_COMPLETE.md  PROJECT_CONTEXT.md  PUBLISHING.md  README.md  RELEASE_NOTES.md  RELEASE_v0.3.0_COMPLETE.md  SOCIAL_MEDIA.md  STRATEGIC_DIRECTIONS.md  TESTING_GUIDE.md  TESTS_SUMMARY.md  VALIDATION_STATUS.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  docs.yml  lint.yml  npm-publish.yml  publish.yml  release.yml  status-check.yml  test.yml
_sources/: index.rst.txt
docs/source/: changelog.md  conf.py  contributing.md  roadmap.md  system-requirements.md
docs/source/about/: author.md  license.md  support.md
docs/source/api/: index.md
docs/source/examples/: ml-project.md  nextjs-fullstack.md  react-native-app.md  web3-dapp.md
docs/source/profiles/: coming-soon.md  ml-python.md  mobile-react-native.md  overview.md  utils-databases.md  utils-docker.md  utils-version-control.md  web-nextjs.md  web3-solidity.md
docs/source/user-guide/: cli-reference.md  profile-management.md  python-api.md  system-diagnostics.md  troubleshooting.md
examples/: basic_usage.py
he2plus/: __init__.py  cli.py  core.py  dev.py  system.py  utils.py  welcome.py
he2plus/cli/: __init__.py  main.py
he2plus/components/: __init__.py
he2plus/components/languages/: __init__.py  node.py  (+1 more)
he2plus/core/: __init__.py  installer.py  system.py  system_profiler.py  validator.py
he2plus/languages/: __init__.py  node.py  python.py
he2plus/profiles/: __init__.py  base.py  registry.py
he2plus/stacks/: __init__.py  base.py  web3.py
npm-package/: .npmignore  README.md  index.js  package-lock.json  package.json
npm-package/scripts/: install.js
npm-package/test/: test.js
scripts/: post_install.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_profiles.py
tests/docker/: README.md  docker-compose.test.yml  run-all-tests.sh  test-ml-python.dockerfile  test-mobile-react-native.dockerfile  test-web-nextjs.dockerfile  test-web3-solidity.dockerfile
tests/docker-validation/: Dockerfile.debian  Dockerfile.ubuntu20  Dockerfile.ubuntu22  docker-compose.yml  run_all_tests.sh  test_comprehensive.sh
tests/e2e-fullstack/: Dockerfile.mac-dev  README.md  TEST_SUCCESS_REPORT.md  docker-compose.yml  run-test-local.sh
tests/integration/: test_cli.py
tests/unit/: test_components.py  test_profiles.py  test_registry.py  test_system.py  test_validator.py
(+18 files in other folders)
